chore: 설정 파일 수정, 초기 데이터 관련 sql 추가
- hibernate 설정 보완
- p6spy 추가
- sql문 추가 (테이블 생성, 초기 데이터 추가)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,13 +15,11 @@ spring:
     console:
       enabled: true
   jpa:
+    hibernate:
+      ddl-auto: none
     properties:
       hibernate:
 #        dialect: org.hibernate.dialect.MySQL8Dialect
         dialect: org.hibernate.dialect.H2Dialect
-        ddl-auto: create-drop
-        format_sql: true
         show_sql: true
-        naming:
-          physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-          implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+        format_sql: true
