--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,11 @@
 spring:
   application:
     name: hhplus-server
-#  datasource:
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/hhplus_concert
-#    username:
-#    password:
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:testdb
-    username: sa
-    password:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/hhplus_concert
+    username: root
+    password: admin1234
   h2:
     console:
       enabled: true
@@ -19,8 +14,7 @@ spring:
       ddl-auto: none
     properties:
       hibernate:
-#        dialect: org.hibernate.dialect.MySQL8Dialect
-        dialect: org.hibernate.dialect.H2Dialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
         show_sql: true
         format_sql: true
   data:
