--- a/src/main/resources/docker-compose.yml
+++ b/src/main/resources/docker-compose.yml
@@ -1,8 +1,5 @@
 version: '3.8'
 
-networks:
-  kafka-network:
-
 services:
   kafka:
     image: confluentinc/cp-kafka:latest
@@ -10,7 +7,7 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9100
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@localhost:9100
       KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
       KAFKA_PROCESS_ROLES: broker,controller
@@ -24,18 +21,3 @@ services:
       - "9100:9100"
     volumes:
       - /var/lib/kafka/data
-    networks:
-      - kafka-network
-
-  kafka-ui:
-    image: provectuslabs/kafka-ui:latest
-    environment:
-      DYNAMIC_CONFIG_ENABLED: true
-      KAFKA_CLUSTERS_0_NAME: hhplus-server
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
-    ports:
-      - "8085:8080"
-    depends_on:
-      - kafka
-    networks:
-      - kafka-network
